fix(options): dark mode

--- a/src/assets/css/options.css
+++ b/src/assets/css/options.css
@@ -9,12 +9,16 @@
   --text-color: #e50914;
   --secondary-color: #831010;
   --header-color: #221f1f;
+  --label-color: #221f1f;
+  --option-color: #e6e6e6;
   --accent-color: #564d4d;
 }
 
 [data-theme="dark"] {
   --background-color: #141414;
   --header-color: #f5f5f1;
+  --label-color: #221f1f;
+  --option-color: #a1a1a1;
 }
 
 body {
@@ -58,7 +62,7 @@ label {
   display: inline-block;
   margin-bottom: 3px;
   font-size: 24px;
-  color: var(--header-color);
+  color: var(--label-color);
 }
 
 input,
@@ -159,6 +163,10 @@ div.flex-2 > * {
   gap: 2rem;
 }
 
+#quotes-container div label {
+  color: var(--header-color);
+}
+
 #quotes-container > * {
   width: calc(33% - 2rem);
 }
@@ -228,7 +236,7 @@ input:checked + .slider:before {
 .option {
   margin: 32px 0;
   padding: 16px;
-  background-color: #e6e6e6;
+  background-color: var(--option-color);
 }
 
 .input-group-addon {
